--- a/style.css
+++ b/style.css
@@ -9,3 +9,10 @@ header {
     color: #fff;
     padding: 20px;
   }
+
+  footer{
+    background-color: #001c3a;
+    text-align: center;
+    color: #fff;
+    padding: 20px;
+  }
