--- a/style.css
+++ b/style.css
@@ -10,9 +10,17 @@ header {
     padding: 20px;
   }
 
-  footer{
+footer{
     background-color: #001c3a;
     text-align: center;
     color: #fff;
+    padding: 20px;
+  }
+
+  main {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
     padding: 20px;
   }
