--- a/style.css
+++ b/style.css
@@ -24,3 +24,12 @@ footer{
     flex-wrap: wrap;
     padding: 20px;
   }
+
+  .textArea, .glasses {
+    width: 40%;
+    padding: 20px;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    margin-bottom: 20px;
+  }
