--- a/style.css
+++ b/style.css
@@ -33,3 +33,8 @@ footer{
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     margin-bottom: 20px;
   }
+
+.button {
+  display: flex;
+  flex-direction: column;
+}
