--- a/style.css
+++ b/style.css
@@ -39,10 +39,7 @@ footer{
   flex-direction: column; 
 }
 
- .button:hover {
-    box-shadow: 1px 1px 25px 10px rgba(146, 148, 248, 0.4);
-  }
-
+ 
 a {
   color: #f4f4f4;
   text-transform: uppercase;
@@ -53,8 +50,11 @@ a {
   padding: 5px;
   margin-right: 10px;
   margin-bottom: 10px;
-  
    }
+
+a:hover {
+    box-shadow: 1px 1px 10px 5px rgba(146, 148, 248, 0.4);
+  }
 
 .remind-laterButton{
     position: relative;
