--- a/style.css
+++ b/style.css
@@ -75,3 +75,11 @@ footer{
   display: inline-block;
   cursor: pointer;
 }
+
+.glass:hover {
+  background-color: white;
+}
+
+.glass.drunk {
+  background-color: #3391cc;
+}
