--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
     margin: 0;
     padding: 0;
 }
@@ -41,8 +42,9 @@ footer{
 
   a {
     color: #f4f4f4;
-    text-transform: uppercase;
     text-decoration: none;
+    font-size: 20px;
+    line-height: 1.5;
     background-color: #001c3a;
     border: 1px solid rgb(106, 107, 189);
     border-radius: 5px;
@@ -52,7 +54,9 @@ footer{
     }
 
   a:hover {
-      box-shadow: 1px 1px 10px 5px rgba(146, 148, 248, 0.4);
+      box-shadow: 1px 1px 10px 5px rgba(6, 9, 181, 0.228);
+      color: rgb(207, 207, 207);
+      background-color: #1f0a48;
     }
 
   .remind-laterButton{
