--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     margin: 0;
     padding: 0;
 }
@@ -12,10 +12,13 @@ header {
   }
 
 footer{
-    background-color: #001c3a;
-    text-align: center;
-    color: #fff;
-    padding: 20px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #001c3a;
+  text-align: center;
+  color: #fff;
+  padding: 20px;
   }
 
   main {
@@ -43,20 +46,25 @@ footer{
   a {
     color: #f4f4f4;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 1.5;
     background-color: #001c3a;
     border: 1px solid rgb(106, 107, 189);
     border-radius: 5px;
-    padding: 5px;
+    padding: 4px;
     margin-right: 10px;
     margin-bottom: 10px;
+    transition-duration: 500ms;
+    
     }
 
   a:hover {
+      
       box-shadow: 1px 1px 10px 5px rgba(6, 9, 181, 0.228);
       color: rgb(207, 207, 207);
       background-color: #1f0a48;
+      font-size: 18px;
+      
     }
 
   .remind-laterButton{
