--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ footer{
     flex-direction: column; 
    }
 
-  a {
+  button {
     color: #f4f4f4;
     text-decoration: none;
     font-size: 15px;
@@ -51,14 +51,14 @@ footer{
     background-color: #001c3a;
     border: 1px solid rgb(106, 107, 189);
     border-radius: 5px;
-    padding: 4px;
+    padding: 7px;
     margin-right: 10px;
     margin-bottom: 10px;
     transition-duration: 500ms;
     
     }
 
-  a:hover {
+  button:hover {
       
       box-shadow: 1px 1px 10px 5px rgba(6, 9, 181, 0.228);
       color: rgb(207, 207, 207);
@@ -72,10 +72,7 @@ footer{
       overflow: hidden;
     }
 
-  .drank-waterButton{
-      position: relative;
-      overflow: hidden;
-    }
+ 
 
 .glass {
   margin: 10px;
