--- a/style.css
+++ b/style.css
@@ -37,7 +37,9 @@ footer{
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     margin-bottom: 20px;
   }
-
+#reset{
+margin: 10px;
+}
   .button {
     display: flex;
     flex-direction: column; 
@@ -72,7 +74,6 @@ footer{
       overflow: hidden;
     }
 
- 
 
 .glass {
   margin: 10px;
