--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ footer{
     padding: 20px;
   }
 
-  .glasses {
-    width: auto;
+  .textArea, .glasses {
+    width: 40%;
     padding: 20px;
     background-color: #f2f2f2;
     border-radius: 5px;
@@ -38,46 +38,64 @@ footer{
     margin-bottom: 20px;
   }
 
-    .glass {
-      margin: 10px;
-      background-color: #001c3a5c;
-      width: 40px;
-      height: 40px;
-      border: 1px solid #333;
-      border-radius: 50%;
-      display: inline-block;
-      cursor: pointer;
+  .textArea.active{
+      box-shadow: 1px 1px 10px 5px rgba(6, 9, 181, 0.228);
     }
 
-    .glass:hover {
-      background-color: #6d6382;
-      transition: 400ms;
+  .textArea  p {
+    margin: 38px 0px 37px 0px;
+  }
+#reset{
+margin: 10px;
+}
+  .button {
+    display: flex;
+    flex-direction: column; 
+   }
+
+  button {
+    color: #f4f4f4;
+    text-decoration: none;
+    font-size: 15px;
+    line-height: 1.5;
+    background-color: #001c3a;
+    border: 1px solid rgb(106, 107, 189);
+    border-radius: 5px;
+    padding: 7px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    transition-duration: 500ms;
+    
     }
 
-   #reset{
-    margin: 10px;
+  button:hover {
+      
+      box-shadow: 1px 1px 10px 5px rgba(6, 9, 181, 0.228);
+      color: rgb(207, 207, 207);
+      background-color: #1f0a48;
+      font-size: 18px;
+      
     }
-      
-    button {
-      color: #f4f4f4;
-      text-decoration: none;
-      font-size: 15px;
-      line-height: 1.5;
-      background-color: #001c3a;
-      border: 1px solid rgb(106, 107, 189);
-      border-radius: 5px;
-      padding: 7px;
-      margin-right: 10px;
-      margin-bottom: 10px;
-      transition-duration: 500ms;
-      
-      }
-  
-    button:hover {
-        
-        box-shadow: 1px 1px 10px 5px rgba(6, 9, 181, 0.228);
-        color: rgb(207, 207, 207);
-        background-color: #1f0a48;
-        font-size: 16px;
-        
-      }
+
+  .remind-laterButton{
+      position: relative;
+      overflow: hidden;
+    }
+
+
+.glass {
+  margin: 10px;
+  background-color: #001c3a5c;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #333;
+  border-radius: 50%;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.glass:hover {
+  background-color: #6d6382;
+  transition: 400ms;
+}
+
