--- a/style.css
+++ b/style.css
@@ -43,11 +43,10 @@ footer{
     }
 
   .textArea  p {
-    margin: 38px 0px 37px 0px;
+    font-size: 17px;
+    margin: 35px 0px 35px 0px;
   }
-#reset{
-margin: 10px;
-}
+
   .button {
     display: flex;
     flex-direction: column; 
@@ -73,15 +72,34 @@ margin: 10px;
       box-shadow: 1px 1px 10px 5px rgba(6, 9, 181, 0.228);
       color: rgb(207, 207, 207);
       background-color: #1f0a48;
-      font-size: 18px;
+      font-size: 16px;
       
     }
 
-  .remind-laterButton{
-      position: relative;
-      overflow: hidden;
-    }
+ 
+ #startApp{
+    color: #001c3a;
+    text-decoration: none;
+    font-size: 15px;
+    line-height: 1.5;
+    background-color: #f2f2f2;
+    border: 1px solid rgb(106, 107, 189);
+    border-radius: 5px;
+    padding: 5px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    transition-duration: 500ms;
+   }
+#startAPP:hover{
+  box-shadow: 1px 1px 10px 5px rgba(6, 9, 181, 0.228);
+  color: rgb(207, 207, 207);
+  background-color: #1f0a48;
+  font-size: 16px;
+}
 
+.glassArea{
+  margin-bottom: 15px;
+}
 
 .glass {
   margin: 10px;
